@@ -1,3 +1,10 @@
+Sun Dec 26 20:16:33 CET 2010  John Tytgat  <John.Tytgat@aaug.net>
+
+	* macros.c (Macro_Call): Don't pass the comment as part of the last macro
+	argument.
+	* regression/tests_pass/macro_args.s: Update test.
+	* input.h (TOLOWER): Remove.
+
 Sun Dec 26 19:00:22 CET 2010  John Tytgat  <John.Tytgat@aaug.net>
 
 	* regression/tests_pass/if_else.s: Add ELIF tests.
